--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.10.2",
     "mongodb": "^2.1.16",
     "socket.io": "^1.4.5",
-    "socket.io-stream": "^0.9.0"
+    "socket.io-stream": "^0.9.0",
+    "rmdir": "*",
+    "plist": "*",
+    "mime": "*"
   }
 }
